[build-system]
requires = [
    "setuptools>=58.0.0",
    "setuptools_scm>=6.2",
    "wheel>=0.37.0",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
# asyncio_mode = "auto"
xfail_strict = true
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/ppc_asm/version.py"
git_describe_command = "git describe --dirty --tags --long --match v[0-9]*"

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "C90", "I", "UP"]

# Version to target for generated code.
target-version = "py38"