[build-system]
requires = [
    "setuptools>=61.2",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "ppc-asm"
authors = [{name = "Henrique Gemignani Passos Lima"}]
description = "library for writing assembly for PowerPC, focused on Nintendo GameCube/Wii"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10"
dynamic = ["version"]

dependencies = [
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/henriquegemignani/ppc-asm"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
]

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/ppc_asm/version.py"
git_describe_command = "git describe --dirty --tags --long --match v[0-9]*"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
# asyncio_mode = "auto"
xfail_strict = true
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E", # PyCodeStyle Errors
    "F", # Pyflakes (Errors/Warnings)
    "W", # PyCodeStyle Warnings
    "I", # Import Sorting (isort)
    "UP", # Python Upgrades (pyupgrade)
    "C4", # Comprehensions (flake8-comprehensions)
    "C90", # complexity (mccabe)
    "RSE", # flake8-raise (RSE)
    "PTH", # use pathlib
    "COM818", "COM819", # trailing comma
    "ISC", # flake8-implicit-str-concat
    "PIE", # flake8-pie (misc checks)
    "PT", # common style issues or inconsistencies with pytest-based tests (flake8-pytest-style)
    "SIM101", # Multiple isinstance calls for {name}, merge into a single call
    "RUF",  # Ruff-specific rules
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "TC",  # flake8-type-checking
    "ANN001", # Missing type annotation for function argument {name}
    "ANN002", # Missing type annotation for *{name}
    "ANN003", # Missing type annotation for **{name}
    "ANN201", # Missing return type annotation for public function {name}

    "PLC",  # pylint convention
    "PLE",  # pylint error
    "PLW",  # pylint warning

    # pylint refactor
    "PLR0402", # Use from {module} import {name} in lieu of alias
    "PLR1711", # Useless return statement at end of function
    "PLR1722", # Use sys.exit() instead of {name}
    "PLR0206", # Cannot have defined parameters for properties
    "PLR0133", # Two constants compared in a comparison, consider replacing {left_constant} {op} {right_constant}
    "PLR0124", # Name compared with itself, consider replacing {actual}
]
extend-ignore = [
    "ISC001",  # may cause conflicts with formatter
    "PLR0913",  # Too many arguments for function
]

[tool.mypy]
files = [
    "src"
]
follow_imports = "silent"
disallow_untyped_defs = true
local_partial_types = true
warn_unused_ignores = true
enable_error_code = [
    "ignore-without-code",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]