[metadata]
name = ppc-asm
author = Henrique Gemignani Passos Lima
url = https://github.com/henriquegemignani/ppc-asm
description = "library for writing assembly for PowerPC, focused on Nintendo GameCube/Wii"

long_description = file: README.md
long_description_content_type = text/markdown
license_files =
    LICENSE

classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
include_package_data = True
zip_safe = True
python_requires = >=3.8

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-mock
    mock>=4.0
    pre-commit